# jax-ffi-template

./: CMakeLists.txt  README.md  pyproject.toml  test.py
csrc/include/common/: checks.h
csrc/src/: extensions.cc  gpu_ops.cu
src/jax_ffi_template/: __init__.py  ops.py
src/jax_ffi_template/_src/: spmd_ops.py
tests/: test_axpy.py
