[build-system]
requires = [
    "scikit-build-core >=0.4.3",
    "nanobind >=1.3.2",
    "jax >= 0.4.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "jax_ffi_template"
version = "0.1.0"
description = "JAX FFI Template"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Wassim Kabalan"}]
classifiers = ["License :: OSI Approved :: BSD License"]
license.file = "LICENSE"
keywords = ["JAX-FFI"]

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.25"
build-dir = "build/{wheel_tag}"
wheel.py-api = "py3"
cmake.build-type = "Release"

[tool.ruff]
line-length = 150
fix = true
src = ["src"]

[tool.ruff.lint]
select = [
    # pycodestyle
    'E',
    # pyflakes
    'F',
    # pyupgrade
    'UP',
    # flake8-debugger
    'T10',
    # isort
    'I',
]

ignore = [
    'E402', # module level import not at top of file
    'E203',
    'E731',
    'E701',
    'E741',
    'E722',
    'UP037', # conflicts with jaxtyping Array annotations
]


[tool.ruff.format]
quote-style = 'single'
